recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:2: error: Non-zero integral values may not have a leading zero.
  avance(100,00)
             ^FourSquare:2: error: illegal start of simple expression
  avance(100,00)
             ^FourSquare:4: error: ')' expected but '}' found.
} 
^